<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_qr"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/qr_reader" />
        <item
            android:id="@+id/nav_transl"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/translato" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/history" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/email_to_developer" />
        </menu>
    </item>

    <item android:title="@string/more">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/setings" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/about" />
            </group>
        </menu>
    </item>

</menu>
